<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fotki</string>
    <!--facebook app key -->
    <string name="facebook_app_id">295954540750511</string>
    <string name="fb_login_protocol_scheme">fb295954540750511</string>
    <!-- Application String -->
    <string name="et_user_name_hint">User Name</string>
    <string name="et_user_password_hint">Password</string>
    <string name="bt_login_text">Sign in</string>
    <string name="bt_retry">Retry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_create_folder">Create Folder</string>
    <string name="action_update_folder">Folder Properties</string>
    <string name="action_create_Album">Create Album</string>
    <string name="action_reload_Folder">Refresh</string>
    <string name="action_copyClipBoard">Copy To  Clipboard</string>
    <string name="action_album_link">Copy Album Link</string>
    <string name="action_folder_link">Copy Folder Link</string>
    <string name="action_shareLinkVia">Share Link</string>
    <string name="action_logout">Logout</string>
    <string name="text_logout">Are you sure you want to logout from Fotki app?</string>
    <string name="text_upload_successful_title">Uploaded success</string>
    <string name="text_upload_success">Upload has been finished, returning to album.</string>
    <string name="text_return">return</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="action_settings">Background upload</string>
    <string name="action_update_album">Album Properties</string>
    <string name="action_upload_files">Upload</string>
    <string name="adele_hello">User Name</string>
    <string name="text_progress_bar_wait">Please wait!</string>
    <string name="text_loading_your_album">Loading your albums &#8230;</string>
    <string name="text_calling_getAccountTree_api">Calling get Account tree api</string>
    <string name="text_callin_account_Info">Calling get Account api</string>
    <string name="text_parsing_account_Indo">Parsing Account Info detail</string>
    <string name="text_parsing_account_tree">Parsing Account tree data</string>
    <string name="text_alert_login">Please enter data in username and password field</string>
    <string name="tab_type_public">public</string>
    <string name="tab_type_private">private</string>
    <string name="tab_type_test">tabs</string>
    <string name="toast_text_update_folder">Update folder clicked from menu dropdown</string>
    <string name="toast_text_create_folder">Create folder clicked from menu dropdown</string>
    <string name="toast_text_update_album">Update album clicked from menu dropdown</string>
    <string name="toast_text_create_album">Create album clicked from menu dropdown</string>
    <string name="toast_text_upload_files">Create album clicked from menu dropdown</string>
    <string name="text_log_session_null">session id must not be null</string>
    <string name="text_execption_illegal">Need to send an index that we know</string>
    <string name="text_log_user_already_login">User is already login</string>
    <string name="wrong_setting_id_message">Wrong session_id</string>
    <string name="btn_close">x</string>
    <string name="btn_Share">Share</string>
    <string name="btn_left">&lt;</string>
    <string name="btn_right">&gt;</string>
    <string name="divider">&#47;</string>
    <string name="create_folder">Folder Name</string>
    <string name="create_album">Album Name</string>
    <string name="create_folder_hint">Create Folder</string>
    <string name="create_album_hint">Create Album</string>
    <string name="description">Description</string>
    <string name="text_file_uploading">Uploading</string>
    <string name="text_current_file">Current File</string>
    <string name="text_current_percentage">0 &#037;</string>
    <string name="text_been_upload"> files have been uploaded </string>
    <string name="text_been_dummy_upload"> 0 of 0 files have been uploaded </string>
    <string name="loading_video">Loading video…</string>
    <string name="permission_message">You have to give permission for file sharing</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="server_error">The server could not be found. Please try again after some time!</string>
    <string name="network_not_found">Cannot connect to Internet&#8230; Please check your connection!</string>
    <string name="auth_failure">Auth failure. Please check the details of your account</string>
    <string name="parse_error">Parsing error! Please try again after some time!</string>
    <string name="time_out_error">Connection TimeOut! Please check your internet connection.</string>
    <string name="empty_album">Album is empty, but you can:</string>
    <string name="empty_Folder">Folder is empty, but you can:</string>
    <string name="Upload_button">Upload photos and videos</string>
    <string name="Create_button">Create Album</string>
    <string name="Create_folder_button">Create Folder</string>
    <string name="upload_inProgress">Upload in progress. Please let current upload finish</string>
    <string name="open_uploadScreen">Open Upload Screen</string>
    <string name="no_update_in_progress">No uploads in progress</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="album_title">Album</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="no_account_found">No accounts found.</string>
    <string name="create_account_on_server">P</string>
    <string name="choose_account">Choose An Account</string>
    <string name="to_continue">to continue</string>
    <string name="permission_download_denied">You have disabled read and write permissions. Please allow these permissions from application setting to use this feature.</string>
    <string name="no_internet_access">No Internet connection. Make sure that Wi-fi or cellular mobile data is turned on, then try again.</string>
    <string name="resize_photos_before_Uploading">Resize photos before uploading?</string>
    <string name="share_media">Share Media </string>
    <string name="resize_note">Note : For Photos only</string>
    <string name="resize_photos_text">Would you like to upload Resized versions of your photos or upload Originals? Please keep in mind that uploading Originals may take more time  (photos only).</string>
    <string name="resize_photos_text_delete">When you confirmed this action all selected photos will be removed from device! Would you like to upload Resized versions of your photos or upload Originals?</string>
    <string name="resize_share_photos_text">Would you like to share the resized version of your photo (photos only).</string>
    <string name="choice">choice</string>
    <string name="text_slection">Here what we found with the fotkin@gmail.com email Please choose your Fotki account you want to log in with</string>
    <string name="text_cannot_uploload_trough_folder">Please open an album to upload</string>
    <string name="text_Upload_from_Album">You can directly upload from here to the Album</string>
    <string name="retry">Retry</string>
    <string name="bt_cancel">Cancel</string>
    <string name="action_upload_and_delete_files">Upload and Delete</string>
    <string name="text_file_uploading_and_delete">Uploading and Deleting</string>
    <string name="bt_pause">Pause</string>
    <string name="bt_start">Start</string>
    <string name="bt_resume">Resume</string>
    <string name="btn_close_text">Close</string>
    <string name="btn_no_thanks">No, thank you</string>
    <string name="checkbox_activate_background">Activate background upload</string>
    <string name="action_albums">Albums</string>
    <string name="title_activity_backup_settings">BackupSettingsActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="save">save</string>
    <string name="choose_folders">Choose folders:</string>
    <string name="action_save_and_close">Save and close</string>
    <string name="enable_background">Background upload</string>
    <string name="upload_progress">Upload progress</string>
    <string name="no_media_to_upload">No media to upload</string>
    <string name="folders_upload">Upload from following folders</string>
    <string name="none">None</string>
    <string name="upload_destination">Upload destination</string>
    <string name="cellular_mobile">Use cellular/mobile data to upload:</string>
    <string name="upload_works">Upload works:</string>
    <string name="log_activity_label">Upload log</string>
    <string name="started_syncing">Starting background upload…</string>
    <string name="test_permissions_history">For using Fotki app we need to have read storage permissions. It provides access to your photo.</string>
    <string name="stop_upload">Stop upload</string>
    <string name="confirm_stop_upload">Do you want to stop background upload, disable process and dismiss all properties.</string>
    <string name="dismiss">cancel</string>
    <string name="confirm">ok</string>
    <string name="confirm_start_upload">Do you want to start upload from selected directories?</string>
    <string name="menu_clear">Clear</string>
    <string name="clear_log_message">Do you want to clear all info from log?</string>
    <string name="backup_folder">Private/Background upload</string>
    <string name="has_uploads_text">Looks like Fotki was closed while it was uploading, would you like to resume upload process?</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="uploading">Uploading...</string>
    <string name="share_image">Share</string>
    <string name="remove_image">Remove</string>
    <string name="save_image">Download</string>
    <string name="cancel_bth">Cancel</string>
    <string name="pause_btn">Pause</string>
    <string name="tab_type_upload">Upload</string>
    <string name="copy_direct_url">Copy direct URL</string>
</resources>
