<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_dropdown_fotki"

    >
    <item
        android:id="@+id/create_folder"
        android:orderInCategory="100"
        android:title="@string/action_create_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/update_folder"
        android:orderInCategory="100"
        android:title="@string/action_update_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_album"
        android:orderInCategory="100"
        android:title="@string/action_create_Album"
        app:showAsAction="never" />
    <item
        android:id="@+id/reload_folder"
        android:orderInCategory="100"
        android:title="@string/action_reload_Folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_toClipBoard"
        android:orderInCategory="100"
        android:title="@string/action_folder_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_via"
        android:orderInCategory="100"
        android:title="@string/action_shareLinkVia"
        app:showAsAction="never" />
</menu>