<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_dropdown_fotki">
    <item
        android:id="@+id/share_image"
        android:orderInCategory="100"
        android:title="@string/share_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove_image"
        android:orderInCategory="100"
        android:title="@string/remove_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_image"
        android:orderInCategory="100"
        android:title="@string/save_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_url"
        android:orderInCategory="100"
        android:title="@string/copy_direct_url"
        app:showAsAction="never"/>
</menu>